--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-route-props-context",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "puts routeProps on context of each route component",
   "main": "lib/index.js",
   "scripts": {
@@ -29,16 +29,17 @@
     "babel-cli": "^6.8.0",
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
     "babel-plugin-transform-react-constant-elements": "^6.8.0",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "eslint": "^2.9.0",
-    "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^5.1.1",
-    "react": "^15.0.2"
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "prop-types": "^15.5.8"
+  }
 }
