--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-route-props-context",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "puts routeProps on context of each route component",
   "main": "lib/index.js",
   "scripts": {
@@ -26,9 +26,6 @@
     "react": "^0.14.x || ^15.0.0"
   },
   "devDependencies": {
-    "eslint": "^3.11.1",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^6.8.0",
     "babel-cli": "^6.8.0",
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
@@ -37,6 +34,10 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
+    "eslint": "^3.11.1",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^6.8.0",
+    "flow-bin": "^0.56.0",
     "react": "^15.5.4"
   },
   "dependencies": {
