--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/jedwards1211/react-router-route-props-context#readme",
   "peerDependencies": {
-    "react": "^0.14.x || ^15.0.0 || 16.2.0"
+    "react": "^0.14.x || ^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.8.0",
